--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   	"url": "https://github.com/879479119/react-native-shadow/issues"
   },
   "dependencies": {
-    "react-native-svg": "^4.3.1"
+    "react-native-svg": "5.1.4"
   }
 }
